// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Decoding Main: Match Snapshots 1 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#FFF",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginRight": 2,
        "marginTop": 2,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#E88C0C",
          "flex": 1,
          "height": 250,
          "justifyContent": "center",
          "marginLeft": 2,
          "marginTop": 2,
        }
      }
    >
      <Themed.Icon
        iconStyle={
          Object {
            "color": "#FFF",
            "fontSize": 40,
            "textAlign": "center",
          }
        }
        name="photo"
        type="font-awesome"
      />
    </TouchableOpacity>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginRight": 2,
      }
    }
  >
    <PhotoAlbumList
      onPhotoPress={[Function]}
    />
  </View>
</View>
`;

exports[`Decoding Main: Match Snapshots 2 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#17212D",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginRight": 2,
        "marginTop": 2,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#E88C0C",
          "flex": 1,
          "height": 250,
          "justifyContent": "center",
          "marginLeft": 2,
          "marginTop": 2,
        }
      }
    >
      <Themed.Icon
        iconStyle={
          Object {
            "color": "#FFF",
            "fontSize": 40,
            "textAlign": "center",
          }
        }
        name="photo"
        type="font-awesome"
      />
    </TouchableOpacity>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginRight": 2,
      }
    }
  >
    <PhotoAlbumList
      onPhotoPress={[Function]}
    />
  </View>
</View>
`;
